fix breadcrumb spacing

--- a/gutenberg/style2.css
+++ b/gutenberg/style2.css
@@ -835,7 +835,7 @@ ul.results li::before {
 
 /* Custom CSS for bibrec */
 .bibrec_page div .page_content {
-  margin-top: 110px;
+  margin-top: 140px;
   padding-left: 5vw;
   padding-right: 5vw;
 }
